# user_balance_task

./: .gitignore  README.md  entrypoint.sh  pyproject.toml
deploy/: docker-compose.yml
environments/: .env.local
src/: enums.py  main.py
src/db/: session.py
src/db/models/: __init__.py  balance_transaction.py  user_balance.py
src/dependencies/: user.py
src/messaging/: broker.py  config.py
src/messaging/consumer/: balance_update.py  core.py  messages.py
src/repositories/: balance_transaction.py  user_balance.py
src/resources/: config.py
src/resources/logs/: config.py
src/resources/migrations/: alembic.ini
src/resources/migrations/alembic/: env.py
src/resources/migrations/alembic/versions/: 5c28166c9d30_user_balances.py  d2ba87f8e50a_balance_transaction.py
src/routers/: health.py  user_balance.py
src/schemas/: user_balance.py
src/services/: uow.py  user_balance.py
src/tests/: conftest.py
src/tests/test_api/: test_user_balance.py
src/tests/test_services/: test_balance.py  test_consumer.py  test_dependencies.py
